Fix z-index NavBar

--- a/src/scss/components/navBar.scss
+++ b/src/scss/components/navBar.scss
@@ -49,6 +49,7 @@
       background-color: #ffff;
       position: fixed;
       top: 0;
+      z-index: 20;
 
       .navBar--img_logo {
           width: 150px;
